# agaml_project

./: .env  .gitattributes  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: __init__.py  authentication.py  cors.py  postgres.py  redis.py  server.py
exceptions/: __init__.py  server.py
exceptions/handlers/: __init__.py  server.py
middleware/: __init__.py  redis_cache.py
models/: __init__.py  employee.py  employer.py  user.py
postgres/: __init__.py  accessor.py  authentication.py  base_accessor.py  employees_accessor.py  employers_accessor.py  users_accessor.py
project_data/: init.sql
redis_server/: redis.py
routes/: __init__.py  auth.py  employees.py  employers.py
